--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
                     <div class="overlay-content">
                         <h3>Workshop CX</h3>
                         <div class="project-links">
-                            <a href="#" target="_blank">Demonstração</a>
+                            <a href="https://laviramos.github.io/InteractiveWorkshopCX/" target="_blank">Demonstração</a>
                         </div>
                     </div>
                 </div>
