--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social</title>
+    <title>Lavínia Ramos</title>
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
